# shafeeq-ai

./: .gitignore  README.md  cloud-apps.conf  deploy_dev.sh  deploy_docker.sh  deploy_on_cloud.sh  deploy_prod.sh  docker-compose.yml  run_prod.sh  run_stack.sh  setup_cloud_proxy.sh  test_parse.js  test_stream.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  test_fastapi.py
backend/public/: custom.js
backend/src/: agent_brain.py  app.py  auth.py  brain.py  cache.py  database.py  debug_app.py  graph.py  ingest.py  init_db.py  main.py  models.py  schemas.py  stt_handler.py  tts_handler.py
backend/src/agents/: nodes.py  prompts.py  state.py  tools.py
backend/src/routes/: auth.py  chat.py
backend/tests/: smoke_test.py
backend/tests/evaluation/: benchmark_result.csv  benchmark_result.jsonl  custom_aiml_model.py  generate_dataset.py  run_benchmarks.py  test_suite-original.jsonl
backend/tests/evaluation/.deepeval/: .deepeval_telemetry.txt
documentation/: HLD-Arch.md  LLD.md  Next-Steps.md
frontend/: Dockerfile  index.html  nginx-docker.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: chat.ts  client.ts
frontend/src/components/: AuthModal.tsx  BottomDrawer.tsx  ChatInterface.tsx  ChatSidebar.tsx  ConversationHistory.tsx  Header.tsx  Logo.tsx  StateBackgrounds.tsx  VoiceCircle.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useChat.ts
frontend/src/pages/: Profile.tsx
frontend/src/utils/: WavRecorder.ts
grafana/dashboards/: llm_observability.json
grafana/provisioning/dashboards/: dashboard.yml
jaeger/: jaeger-config.yml
litellm/: config.yaml  start_proxy.sh
nginx/: mime.types  nginx.conf  nginx.prod.conf  ssl.crt  ssl.key
prometheus/: prometheus.yml
