[project]
name = "jeetu-code-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.83",
    "langchain-ollama>=0.3.10",
    "requests>=2.32.5",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "scipy>=1.11.4",
    "numpy>=1.26.4",
    "sarvamai",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.27",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "psycopg2-binary>=2.9.9",
    "langgraph>=0.6.11",
    "tavily-python>=0.7.21",
    "langchain-groq>=0.3.8",
    "langchain-postgres>=0.0.17",
    "psycopg[binary,pool]>=3.2.13",
    "pgvector>=0.3.6",
    "gunicorn>=23.0.0",
    "openlit>=1.33.3",
    "prometheus-client>=0.20.0",
    "eval-type-backport>=0.2.0",
    "deepeval>=3.8.9",
    "groq>=0.37.1",
    "opentelemetry-distro>=0.61b0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-logging>=0.61b0",
    "langchain-openai>=0.3.3",
    "openai>=1.63.2"
]
